fix: changed top bar spacing to match the mockup

--- a/rest-api-countries/src/assets/css/base.css
+++ b/rest-api-countries/src/assets/css/base.css
@@ -212,7 +212,7 @@ body {
 
 .top-bar {
   flex-wrap: wrap;
-  margin: 45px 0;
+  margin: 47px 0;
 }
 
 .top-bar__back-btn {
